# OmskDigital

./: .env  README.md  main.py  pyproject.toml  qwerty.py  requirements.txt
app/: College.db  alembic.ini  config.py  exeptions.py  main.py  schema.py  shema.py
app/AdminPanel/: Admin.py  __init__.py
app/DataBase/: College.db  ConfigDataBase.py  Model.py  crud.py  database.py
app/SearchData/: College.lxml  college.py  hh.py
app/admin/: __init__.py  admin.py
app/alembic/: env.py
app/alembic/versions/: 2e1f729f1813_company_and_project_model.py
app/database/: config_database.py  crud.py  database.py  model.py  schema.py
