[project]
name = "omsktsifra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "authx>=1.4.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "pytest-playwright>=0.7.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
